--- a/src/ros2lcm/CMakeLists.txt
+++ b/src/ros2lcm/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories(/usr/local/include)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+  INCLUDE_DIRS 
 #  LIBRARIES ros2lcm
   CATKIN_DEPENDS roscpp sensor_msgs
 #  DEPENDS system_lib
