--- a/src/ros2lcm/CMakeLists.txt
+++ b/src/ros2lcm/CMakeLists.txt
@@ -10,6 +10,7 @@ project(ros2lcm)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   sensor_msgs
+  tf
 )
 
 include_directories(/usr/local/include)
@@ -24,9 +25,9 @@ include_directories(/usr/local/include)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS 
+  INCLUDE_DIRS
 #  LIBRARIES ros2lcm
-  CATKIN_DEPENDS roscpp sensor_msgs
+  CATKIN_DEPENDS roscpp sensor_msgs tf
 #  DEPENDS system_lib
 )
 
@@ -54,20 +55,22 @@ include_directories(
 add_executable(${PROJECT_NAME}_node src/ros2lcm_main.cpp
  src/Ros2lcm.cpp)
 
+ add_executable(lcm2ros_node src/lcm2ros_main.cpp
+  src/Ros2lcm.cpp)
 
-## Rename C++ executable without prefix
-## The above recommended prefix causes long target names, the following renames the
-## target back to the shorter version for ease of user use
-## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(lcm2ros_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 message( ${catkin_LIBRARIES})
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
+   ${catkin_LIBRARIES}
+   /usr/local/lib/liblcm.so
+)
+target_link_libraries(lcm2ros_node
    ${catkin_LIBRARIES}
    /usr/local/lib/liblcm.so
 )
